--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movies-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://andrii00.github.io/movies_task/",
+  "homepage": "https://andrii00.github.io/moviesProject/",
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
